gccida/g1/ix86_compute_frame_layout
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_compute_frame_layout/src/i386.c:4537:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4048, "ix86_compute_frame_layout"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_compute_frame_layout/src/i386.c:4557:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4050, "ix86_compute_frame_layout"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_compute_frame_layout/src/i386.c:4559:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4052, "ix86_compute_frame_layout"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_compute_frame_layout/src/i386.c:4561:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4054, "ix86_compute_frame_layout"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_compute_frame_layout/src/obj/i386.o] Error 1
